Category service, category card list

--- a/angular.json
+++ b/angular.json
@@ -22,6 +22,11 @@
             "assets": [
               {
                 "glob": "**/*",
+                "input": "src/app/shared",
+                "output": "shared"
+              },
+              {
+                "glob": "**/*",
                 "input": "src/assets",
                 "output": "assets"
               },
@@ -100,6 +105,11 @@
             "styles": [],
             "scripts": [],
             "assets": [
+              {
+                "glob": "**/*",
+                "input": "src/app/shared",
+                "output": "shared"
+              },
               {
                 "glob": "favicon.ico",
                 "input": "src/",
