--- a/angular.json
+++ b/angular.json
@@ -85,6 +85,7 @@
               "browserTarget": "app:build:production"
             },
             "ci": {
+              "progress": false
             }
           }
         },
