--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/schematics": "^14.2.6",
     "@angular/common": "~13.3.11",
     "@angular/core": "~13.3.11",
     "@angular/forms": "~13.3.11",
@@ -43,7 +44,7 @@
     "@angular/compiler-cli": "~13.3.11",
     "@angular/language-service": "~13.3.11",
     "@capacitor/cli": "3.1.1",
-    "@ionic/angular-toolkit": "^7.0.0",
+    "@ionic/angular-toolkit": "^6.1.0",
     "@ionic/lab": "3.2.10",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
