--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.3.11",
     "@angular/platform-browser-dynamic": "~13.3.11",
     "@angular/router": "~13.3.11",
+    "@capacitor/android": "^4.3.0",
     "@capacitor/app": "1.0.2",
     "@capacitor/core": "3.1.1",
     "@capacitor/haptics": "1.0.2",
