--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@angular/platform-browser": "~13.3.11",
     "@angular/platform-browser-dynamic": "~13.3.11",
     "@angular/router": "~13.3.11",
-    "@capacitor/android": "^4.3.0",
-    "@capacitor/app": "1.0.2",
-    "@capacitor/core": "3.1.1",
+    "@capacitor/android": "4.0.1",
+    "@capacitor/app": "4.0.1",
+    "@capacitor/core": "4.0.1",
     "@capacitor/haptics": "1.0.2",
     "@capacitor/keyboard": "1.0.2",
     "@capacitor/status-bar": "1.0.2",
@@ -44,7 +44,7 @@
     "@angular/compiler": "~13.3.11",
     "@angular/compiler-cli": "~13.3.11",
     "@angular/language-service": "~13.3.11",
-    "@capacitor/cli": "3.1.1",
+    "@capacitor/cli": "4.3.0",
     "@ionic/angular-toolkit": "^6.1.0",
     "@ionic/lab": "3.2.10",
     "@types/jasmine": "~3.6.0",
