--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@angular/platform-browser": "~13.3.11",
     "@angular/platform-browser-dynamic": "~13.3.11",
     "@angular/router": "~13.3.11",
-    "@capacitor/android": "4.0.1",
+    "@capacitor/android": "4.3.0",
     "@capacitor/app": "4.0.1",
-    "@capacitor/core": "4.0.1",
+    "@capacitor/core": "4.3.0",
+    "@capacitor/device": "^4.0.1",
     "@capacitor/haptics": "1.0.2",
     "@capacitor/keyboard": "1.0.2",
     "@capacitor/status-bar": "1.0.2",
