Details of the employer's view

--- a/src/app/shared/guards/mocks/launch.json
+++ b/src/app/shared/guards/mocks/launch.json
@@ -4,7 +4,8 @@
         "title":"¿Comó Regisrtar una Marca en Guatemala?",
         "description":"Descubra cómo registrar su marca comercial en Guatemala y proteger los signos distintivos únicos de su negocio. Además, comprenda la importancia de realizar una búsqueda exhaustiva de marcas en Guatemala para garantizar que sus signos distintivos sean únicos.",
         "images":[
-            "https://storage.googleapis.com/stateless-main-bizlatinhub/2020/06/registro-marca-guatemala.jpg"
+            "https://storage.googleapis.com/stateless-main-bizlatinhub/2020/06/registro-marca-guatemala.jpg",
+            "https://aprende.guatemala.com/wp-content/uploads/2020/09/foto-%40benchaccounting.jpg"
         ],
         "link":"#"
     },
@@ -21,8 +22,10 @@
         "id":"125",
         "title":"Inscripción Sociedades SAT",
         "description":"Documento Personal de Identificación (DPI) del representante legal, debe enviarse escaneado de ambos lados, vigente. Pasaporte vigente del representante legal, en caso de ser extranjero. Testimonio de la escritura de constitución original. Nombramiento del representante legal original, vigente.",
+        "paragraph":"Es obligatoria la inscripción en el Registro Mercantil de los comerciantes individuales que tengan un capital de Q.2,000 o más. El comerciante individual puede inscribirse como tal sin inscribir una empresa, sin embargo, esto es inusual pues la empresa le sirve para ejercer el comercio, por lo que el Registro Mercantil permite que el comerciante se inscriba paralelamente a la inscripción de la empresa utilizando un mismo formulario para ambos trámites. Un comerciante individual puede obtener una o más patentes de empresa",
         "images":[
-            "https://iofacturo.mx/wp-content/uploads/2015/09/Registra-tu-empresa-correctamente-ante-el-SAT.jpg"
+            "https://iofacturo.mx/wp-content/uploads/2015/09/Registra-tu-empresa-correctamente-ante-el-SAT.jpg",
+            "https://pbs.twimg.com/media/E2_MkrlWQAIpfh_.jpg"
         ],
         "link":"#"
     }
