Component creation Complete profile and change logos

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
   "appId": "com.tianguis.app",
-  "appName": "Tinguis",
+  "appName": "Tianguis",
   "webDir": "www",
   "bundledWebRuntime": false,
   "npmClient": "npm",
