Adjustments to the notification service

--- a/package.json
+++ b/package.json
@@ -20,14 +20,23 @@
     "@angular/platform-browser": "~13.3.11",
     "@angular/platform-browser-dynamic": "~13.3.11",
     "@angular/router": "~13.3.11",
+    "@awesome-cordova-plugins/core": "^6.1.0",
+    "@awesome-cordova-plugins/file": "^5.46.0",
+    "@awesome-cordova-plugins/http": "^5.46.0",
+    "@awesome-cordova-plugins/splash-screen": "^6.1.0",
+    "@awesome-cordova-plugins/status-bar": "^6.1.0",
     "@capacitor/android": "4.3.0",
     "@capacitor/app": "4.0.1",
     "@capacitor/core": "4.3.0",
     "@capacitor/device": "^4.0.1",
     "@capacitor/haptics": "1.0.2",
     "@capacitor/keyboard": "1.0.2",
+    "@capacitor/push-notifications": "^4.1.1",
+    "@capacitor/splash-screen": "^4.1.1",
     "@capacitor/status-bar": "1.0.2",
     "@ionic/angular": "^6.3.1",
+    "cordova-plugin-advanced-http": "^3.3.1",
+    "cordova-plugin-file": "^7.0.0",
     "ngx-autosize": "^1.8.7",
     "rxjs": "~6.6.0",
     "swiper": "^7.0.6",
