Start capturing images or selecting images to upload to products

--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@awesome-cordova-plugins/status-bar": "^6.1.0",
     "@capacitor/android": "4.3.0",
     "@capacitor/app": "4.0.1",
+    "@capacitor/camera": "^4.1.4",
     "@capacitor/core": "4.3.0",
     "@capacitor/device": "^4.0.1",
+    "@capacitor/filesystem": "^4.1.4",
     "@capacitor/haptics": "1.0.2",
     "@capacitor/keyboard": "1.0.2",
     "@capacitor/push-notifications": "^4.1.1",
