--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -10,6 +10,11 @@
     },
     "PushNotifications": {
       "presentationOptions": ["badge", "sound", "alert"]
+    },
+    "GoogleAuth": {
+      "scopes": ["profile", "email"],
+      "serverClientId": "426633935974-63tc30cbqp0elpodm40c7i4ouf7b3h90.apps.googleusercontent.com",
+      "forceCodeForRefreshToken" : true
     }
   },
   "cordova": {}
