--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
     "@awesome-cordova-plugins/http": "^5.46.0",
     "@awesome-cordova-plugins/splash-screen": "^6.1.0",
     "@awesome-cordova-plugins/status-bar": "^6.1.0",
-    "@capacitor/android": "4.3.0",
-    "@capacitor/app": "4.0.1",
-    "@capacitor/camera": "^4.1.4",
-    "@capacitor/core": "4.3.0",
-    "@capacitor/device": "^4.0.1",
-    "@capacitor/filesystem": "^4.1.4",
-    "@capacitor/haptics": "1.0.2",
-    "@capacitor/keyboard": "1.0.2",
-    "@capacitor/push-notifications": "^4.1.1",
-    "@capacitor/splash-screen": "^4.1.1",
-    "@capacitor/status-bar": "1.0.2",
+    "@capacitor/android": "^5.0.0",
+    "@capacitor/app": "^5.0.0",
+    "@capacitor/camera": "^5.0.0",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/device": "^5.0.0",
+    "@capacitor/filesystem": "^5.0.0",
+    "@capacitor/haptics": "^5.0.0",
+    "@capacitor/keyboard": "^5.0.0",
+    "@capacitor/push-notifications": "^5.0.0",
+    "@capacitor/splash-screen": "^5.0.0",
+    "@capacitor/status-bar": "^5.0.0",
     "@codetrix-studio/capacitor-google-auth": "^3.2.0",
     "@ionic/angular": "^6.3.1",
     "@ionic/storage": "^3.0.6",
@@ -59,7 +59,7 @@
     "@angular/compiler": "~13.3.11",
     "@angular/compiler-cli": "~13.3.11",
     "@angular/language-service": "~13.3.11",
-    "@capacitor/cli": "4.3.0",
+    "@capacitor/cli": "^5.0.0",
     "@ionic/angular-toolkit": "^6.1.0",
     "@ionic/lab": "3.2.10",
     "@types/jasmine": "~3.6.0",
