--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/forms": "~13.3.11",
     "@angular/platform-browser": "~13.3.11",
     "@angular/platform-browser-dynamic": "~13.3.11",
+    "@angular/pwa": "^13.0.0",
     "@angular/router": "~13.3.11",
     "@awesome-cordova-plugins/core": "^6.1.0",
     "@awesome-cordova-plugins/file": "^5.46.0",
