Add documents for pwa

--- a/angular.json
+++ b/angular.json
@@ -68,7 +68,8 @@
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
                 }
-              ]
+              ],
+              "serviceWorker": true
             },
             "ci": {
               "progress": false
