--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~13.3.11",
     "@angular/pwa": "^13.0.0",
     "@angular/router": "~13.3.11",
+    "@angular/service-worker": "^13.4.0",
     "@awesome-cordova-plugins/core": "^6.1.0",
     "@awesome-cordova-plugins/file": "^5.46.0",
     "@awesome-cordova-plugins/http": "^5.46.0",
