--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cordova-plugin-file": "^7.0.0",
     "ngx-autosize": "^1.8.7",
     "rxjs": "~6.6.0",
+    "socket.io-client": "^4.7.4",
     "swiper": "^7.0.6",
     "tslib": "^2.0.0",
     "uuid": "^9.0.0",
