--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular-devkit/schematics": "^14.2.6",
     "@angular/common": "~13.3.11",
     "@angular/core": "~13.3.11",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "~13.3.11",
     "@angular/platform-browser": "~13.3.11",
     "@angular/platform-browser-dynamic": "~13.3.11",
@@ -44,6 +45,7 @@
     "@ionic/storage-angular": "^3.0.6",
     "cordova-plugin-advanced-http": "^3.3.1",
     "cordova-plugin-file": "^7.0.0",
+    "firebase": "^8.8.1",
     "ngx-autosize": "^1.8.7",
     "rxjs": "~6.6.0",
     "socket.io-client": "^4.7.4",
